feat: Control plane OK

--- a/config-builder/documentation/devices/s1-p02.md
+++ b/config-builder/documentation/devices/s1-p02.md
@@ -30,6 +30,7 @@
   - [IPv6 Routing](#ipv6-routing)
   - [Static Routes](#static-routes)
   - [Router ISIS](#router-isis)
+  - [Router BGP](#router-bgp)
 - [MPLS](#mpls)
   - [MPLS and LDP](#mpls-and-ldp)
   - [MPLS Interfaces](#mpls-interfaces)
@@ -565,6 +566,29 @@ router isis CORE
    !
    segment-routing mpls
       no shutdown
+```
+
+### Router BGP
+
+ASN Notation: asplain
+
+#### Router BGP Summary
+
+| BGP AS | Router ID |
+| ------ | --------- |
+| - | - |
+
+#### Router BGP EVPN Address Family
+
+##### EVPN Neighbor Default Encapsulation
+
+| Neighbor Default Encapsulation | Next-hop-self Source Interface |
+| ------------------------------ | ------------------------------ |
+| mpls | Loopback0 |
+
+#### Router BGP Device Configuration
+
+```eos
 ```
 
 ## MPLS
