--- a/config-builder/documentation/devices/s1-pe03.md
+++ b/config-builder/documentation/devices/s1-pe03.md
@@ -327,14 +327,9 @@ vlan 1811
 
 | Interface | Description | Mode | VLANs | Native VLAN | Trunk Group | Channel-Group |
 | --------- | ----------- | ---- | ----- | ----------- | ----------- | ------------- |
+| Ethernet4 | ROUTER_s1-ce03_eth1 | trunk | 1018 | - | - | - |
 
 *Inherited from Port-Channel Interface
-
-##### Encapsulation Dot1q Interfaces
-
-| Interface | Description | Vlan ID | Dot1q VLAN Tag | Dot1q Inner VLAN Tag |
-| --------- | ----------- | ------- | -------------- | -------------------- |
-| Ethernet4.10 | C1_L3_SERVICE | - | 10 | - |
 
 ##### IPv4
 
@@ -342,7 +337,6 @@ vlan 1811
 | --------- | ----------- | ------------- | ---------- | ----| ---- | -------- | ------ | ------- |
 | Ethernet1 | P2P_s1-p01_Ethernet3 | - | 10.255.3.8/31 | default | 1500 | False | - | - |
 | Ethernet2 | P2P_s1-p02_Ethernet3 | - | 10.255.3.10/31 | default | 1500 | False | - | - |
-| Ethernet4.10 | C1_L3_SERVICE | - | 10.0.1.1/29 | SVC01_VRF01 | - | False | - | - |
 
 ##### ISIS
 
@@ -386,15 +380,11 @@ interface Ethernet2
    isis authentication key 7 <removed>
 !
 interface Ethernet4
+   description ROUTER_s1-ce03_eth1
    no shutdown
-   no switchport
-!
-interface Ethernet4.10
-   description C1_L3_SERVICE
-   no shutdown
-   encapsulation dot1q vlan 10
-   vrf SVC01_VRF01
-   ip address 10.0.1.1/29
+   switchport trunk allowed vlan 1018
+   switchport mode trunk
+   switchport
 ```
 
 ### Loopback Interfaces
