--- a/config-builder/documentation/devices/s2-p02.md
+++ b/config-builder/documentation/devices/s2-p02.md
@@ -597,6 +597,12 @@ ASN Notation: asplain
 | ---------- | -------- | ------------ | ------------- | ------------- |
 | EVPN-OVERLAY-PEERS | True |  - | - | default |
 
+##### EVPN Neighbor Default Encapsulation
+
+| Neighbor Default Encapsulation | Next-hop-self Source Interface |
+| ------------------------------ | ------------------------------ |
+| mpls | Loopback0 |
+
 #### Router BGP Device Configuration
 
 ```eos
@@ -632,6 +638,7 @@ router bgp 65001
    neighbor 10.255.1.5 description s2-pe01_Loopback0
    !
    address-family evpn
+      neighbor default encapsulation mpls next-hop-self source-interface Loopback0
       neighbor EVPN-OVERLAY-PEERS activate
    !
    address-family ipv4
