--- a/config-builder/documentation/devices/s2-pe01.md
+++ b/config-builder/documentation/devices/s2-pe01.md
@@ -327,6 +327,7 @@ vlan 1811
 
 | Interface | Description | Mode | VLANs | Native VLAN | Trunk Group | Channel-Group |
 | --------- | ----------- | ---- | ----- | ----------- | ----------- | ------------- |
+| Ethernet3 | ROUTER_s2-ce01_eth1 | trunk | 1018 | - | - | - |
 
 *Inherited from Port-Channel Interface
 
@@ -377,6 +378,13 @@ interface Ethernet2
    isis network point-to-point
    isis authentication mode md5
    isis authentication key 7 <removed>
+!
+interface Ethernet3
+   description ROUTER_s2-ce01_eth1
+   no shutdown
+   switchport trunk allowed vlan 1018
+   switchport mode trunk
+   switchport
 ```
 
 ### Loopback Interfaces
