feat: Cleanup group_vars

--- a/config-builder/documentation/devices/s1-pe01.md
+++ b/config-builder/documentation/devices/s1-pe01.md
@@ -536,6 +536,10 @@ ip route 0.0.0.0/0 192.168.2.1
 | Log Adjacency Changes | True |
 | Advertise Passive-only | True |
 | SR MPLS Enabled | True |
+| SPF Interval | 1 seconds |
+| SPF Interval Wait Time| 50 milliseconds |
+| SPF Interval Hold Time| 100 milliseconds |
+| Graceful-restart Enabled | True |
 
 #### ISIS Interfaces Summary
 
@@ -568,7 +572,10 @@ router isis CORE
    router-id ipv4 10.255.1.1
    is-type level-2
    log-adjacency-changes
+   set-overload-bit on-startup 1800
    advertise passive-only
+   spf-interval 1 50 100
+   graceful-restart
    !
    address-family ipv4 unicast
       maximum-paths 4
