--- a/config-builder/documentation/devices/s2-p02.md
+++ b/config-builder/documentation/devices/s2-p02.md
@@ -490,6 +490,10 @@ ip route 0.0.0.0/0 192.168.2.1
 | Log Adjacency Changes | True |
 | Advertise Passive-only | True |
 | SR MPLS Enabled | True |
+| SPF Interval | 1 seconds |
+| SPF Interval Wait Time| 50 milliseconds |
+| SPF Interval Hold Time| 100 milliseconds |
+| Graceful-restart Enabled | True |
 
 #### ISIS Interfaces Summary
 
@@ -524,7 +528,10 @@ router isis CORE
    router-id ipv4 10.255.0.4
    is-type level-2
    log-adjacency-changes
+   set-overload-bit on-startup 1800
    advertise passive-only
+   spf-interval 1 50 100
+   graceful-restart
    !
    address-family ipv4 unicast
       maximum-paths 4
@@ -556,11 +563,11 @@ ASN Notation: asplain
 
 #### Router BGP Peer Groups
 
-##### EVPN-OVERLAY-PEERS
+##### MPLS-OVERLAY-PEERS
 
 | Settings | Value |
 | -------- | ----- |
-| Address Family | evpn |
+| Address Family | mpls |
 | Remote AS | 65001 |
 | Route Reflector Client | Yes |
 | Source | Loopback0 |
@@ -583,11 +590,12 @@ ASN Notation: asplain
 
 | Neighbor | Remote AS | VRF | Shutdown | Send-community | Maximum-routes | Allowas-in | BFD | RIB Pre-Policy Retain | Route-Reflector Client | Passive | TTL Max Hops |
 | -------- | --------- | --- | -------- | -------------- | -------------- | ---------- | --- | --------------------- | ---------------------- | ------- | ------------ |
-| 10.255.1.1 | Inherited from peer group EVPN-OVERLAY-PEERS | default | - | Inherited from peer group EVPN-OVERLAY-PEERS | Inherited from peer group EVPN-OVERLAY-PEERS | - | Inherited from peer group EVPN-OVERLAY-PEERS | - | Inherited from peer group EVPN-OVERLAY-PEERS | - | - |
-| 10.255.1.2 | Inherited from peer group EVPN-OVERLAY-PEERS | default | - | Inherited from peer group EVPN-OVERLAY-PEERS | Inherited from peer group EVPN-OVERLAY-PEERS | - | Inherited from peer group EVPN-OVERLAY-PEERS | - | Inherited from peer group EVPN-OVERLAY-PEERS | - | - |
-| 10.255.1.3 | Inherited from peer group EVPN-OVERLAY-PEERS | default | - | Inherited from peer group EVPN-OVERLAY-PEERS | Inherited from peer group EVPN-OVERLAY-PEERS | - | Inherited from peer group EVPN-OVERLAY-PEERS | - | Inherited from peer group EVPN-OVERLAY-PEERS | - | - |
-| 10.255.1.4 | Inherited from peer group EVPN-OVERLAY-PEERS | default | - | Inherited from peer group EVPN-OVERLAY-PEERS | Inherited from peer group EVPN-OVERLAY-PEERS | - | Inherited from peer group EVPN-OVERLAY-PEERS | - | Inherited from peer group EVPN-OVERLAY-PEERS | - | - |
-| 10.255.1.5 | Inherited from peer group EVPN-OVERLAY-PEERS | default | - | Inherited from peer group EVPN-OVERLAY-PEERS | Inherited from peer group EVPN-OVERLAY-PEERS | - | Inherited from peer group EVPN-OVERLAY-PEERS | - | Inherited from peer group EVPN-OVERLAY-PEERS | - | - |
+| 10.255.0.1 | Inherited from peer group RR-OVERLAY-PEERS | default | - | Inherited from peer group RR-OVERLAY-PEERS | Inherited from peer group RR-OVERLAY-PEERS | - | Inherited from peer group RR-OVERLAY-PEERS | - | - | - | - |
+| 10.255.1.1 | Inherited from peer group MPLS-OVERLAY-PEERS | default | - | Inherited from peer group MPLS-OVERLAY-PEERS | Inherited from peer group MPLS-OVERLAY-PEERS | - | Inherited from peer group MPLS-OVERLAY-PEERS | - | Inherited from peer group MPLS-OVERLAY-PEERS | - | - |
+| 10.255.1.2 | Inherited from peer group MPLS-OVERLAY-PEERS | default | - | Inherited from peer group MPLS-OVERLAY-PEERS | Inherited from peer group MPLS-OVERLAY-PEERS | - | Inherited from peer group MPLS-OVERLAY-PEERS | - | Inherited from peer group MPLS-OVERLAY-PEERS | - | - |
+| 10.255.1.3 | Inherited from peer group MPLS-OVERLAY-PEERS | default | - | Inherited from peer group MPLS-OVERLAY-PEERS | Inherited from peer group MPLS-OVERLAY-PEERS | - | Inherited from peer group MPLS-OVERLAY-PEERS | - | Inherited from peer group MPLS-OVERLAY-PEERS | - | - |
+| 10.255.1.4 | Inherited from peer group MPLS-OVERLAY-PEERS | default | - | Inherited from peer group MPLS-OVERLAY-PEERS | Inherited from peer group MPLS-OVERLAY-PEERS | - | Inherited from peer group MPLS-OVERLAY-PEERS | - | Inherited from peer group MPLS-OVERLAY-PEERS | - | - |
+| 10.255.1.5 | Inherited from peer group MPLS-OVERLAY-PEERS | default | - | Inherited from peer group MPLS-OVERLAY-PEERS | Inherited from peer group MPLS-OVERLAY-PEERS | - | Inherited from peer group MPLS-OVERLAY-PEERS | - | Inherited from peer group MPLS-OVERLAY-PEERS | - | - |
 
 #### Router BGP EVPN Address Family
 
@@ -595,7 +603,8 @@ ASN Notation: asplain
 
 | Peer Group | Activate | Route-map In | Route-map Out | Encapsulation |
 | ---------- | -------- | ------------ | ------------- | ------------- |
-| EVPN-OVERLAY-PEERS | True |  - | - | default |
+| MPLS-OVERLAY-PEERS | True |  - | - | default |
+| RR-OVERLAY-PEERS | True |  - | - | default |
 
 ##### EVPN Neighbor Default Encapsulation
 
@@ -613,36 +622,40 @@ router bgp 65001
    no bgp default ipv4-unicast
    bgp cluster-id 10.255.0.4
    maximum-paths 4 ecmp 4
-   neighbor EVPN-OVERLAY-PEERS peer group
-   neighbor EVPN-OVERLAY-PEERS remote-as 65001
-   neighbor EVPN-OVERLAY-PEERS update-source Loopback0
-   neighbor EVPN-OVERLAY-PEERS bfd
-   neighbor EVPN-OVERLAY-PEERS route-reflector-client
-   neighbor EVPN-OVERLAY-PEERS send-community
-   neighbor EVPN-OVERLAY-PEERS maximum-routes 0
+   neighbor MPLS-OVERLAY-PEERS peer group
+   neighbor MPLS-OVERLAY-PEERS remote-as 65001
+   neighbor MPLS-OVERLAY-PEERS update-source Loopback0
+   neighbor MPLS-OVERLAY-PEERS bfd
+   neighbor MPLS-OVERLAY-PEERS route-reflector-client
+   neighbor MPLS-OVERLAY-PEERS password 7 <removed>
+   neighbor MPLS-OVERLAY-PEERS send-community
+   neighbor MPLS-OVERLAY-PEERS maximum-routes 0
    neighbor RR-OVERLAY-PEERS peer group
    neighbor RR-OVERLAY-PEERS remote-as 65001
    neighbor RR-OVERLAY-PEERS update-source Loopback0
    neighbor RR-OVERLAY-PEERS bfd
    neighbor RR-OVERLAY-PEERS send-community
    neighbor RR-OVERLAY-PEERS maximum-routes 0
-   neighbor 10.255.1.1 peer group EVPN-OVERLAY-PEERS
+   neighbor 10.255.0.1 peer group RR-OVERLAY-PEERS
+   neighbor 10.255.0.1 description s1-p01_Loopback0
+   neighbor 10.255.1.1 peer group MPLS-OVERLAY-PEERS
    neighbor 10.255.1.1 description s1-pe01_Loopback0
-   neighbor 10.255.1.2 peer group EVPN-OVERLAY-PEERS
+   neighbor 10.255.1.2 peer group MPLS-OVERLAY-PEERS
    neighbor 10.255.1.2 description s1-pe02_Loopback0
-   neighbor 10.255.1.3 peer group EVPN-OVERLAY-PEERS
+   neighbor 10.255.1.3 peer group MPLS-OVERLAY-PEERS
    neighbor 10.255.1.3 description s1-pe03_Loopback0
-   neighbor 10.255.1.4 peer group EVPN-OVERLAY-PEERS
+   neighbor 10.255.1.4 peer group MPLS-OVERLAY-PEERS
    neighbor 10.255.1.4 description s1-pe04_Loopback0
-   neighbor 10.255.1.5 peer group EVPN-OVERLAY-PEERS
+   neighbor 10.255.1.5 peer group MPLS-OVERLAY-PEERS
    neighbor 10.255.1.5 description s2-pe01_Loopback0
    !
    address-family evpn
       neighbor default encapsulation mpls next-hop-self source-interface Loopback0
-      neighbor EVPN-OVERLAY-PEERS activate
+      neighbor MPLS-OVERLAY-PEERS activate
+      neighbor RR-OVERLAY-PEERS activate
    !
    address-family ipv4
-      no neighbor EVPN-OVERLAY-PEERS activate
+      no neighbor MPLS-OVERLAY-PEERS activate
       no neighbor RR-OVERLAY-PEERS activate
 ```
 
