fix(avd.isis): Cleanup ISIS configuration based on LLD

--- a/config-builder/documentation/devices/s2-p02.md
+++ b/config-builder/documentation/devices/s2-p02.md
@@ -495,6 +495,12 @@ ip route 0.0.0.0/0 192.168.2.1
 | SPF Interval Hold Time| 100 milliseconds |
 | Graceful-restart Enabled | True |
 
+#### ISIS Route Timers
+
+| Settings | Value |
+| -------- | ----- |
+| Local Convergence Delay | 10000 milliseconds |
+
 #### ISIS Interfaces Summary
 
 | Interface | ISIS Instance | ISIS Metric | Interface Mode |
@@ -518,6 +524,7 @@ ip route 0.0.0.0/0 192.168.2.1
 | IPv4 Address-family Enabled | True |
 | Maximum-paths | 4 |
 | TI-LFA Mode | link-protection |
+| TI-LFA Level | level-2 |
 
 #### Router ISIS Device Configuration
 
@@ -528,14 +535,15 @@ router isis CORE
    router-id ipv4 10.255.0.4
    is-type level-2
    log-adjacency-changes
-   set-overload-bit on-startup 1800
+   timers local-convergence-delay 10000 protected-prefixes
+   set-overload-bit on-startup wait-for-bgp
    advertise passive-only
    spf-interval 1 50 100
    graceful-restart
    !
    address-family ipv4 unicast
       maximum-paths 4
-      fast-reroute ti-lfa mode link-protection
+      fast-reroute ti-lfa mode link-protection level-2
    !
    segment-routing mpls
       no shutdown
