make: Refresh artifact

--- a/config-builder/documentation/devices/s1-pe04.md
+++ b/config-builder/documentation/devices/s1-pe04.md
@@ -595,13 +595,13 @@ router isis CORE
 
 ### Router BGP
 
-ASN Notation: asplain
+ASN Notation: asdot
 
 #### Router BGP Summary
 
 | BGP AS | Router ID |
 | ------ | --------- |
-| 65001 | 10.255.1.4 |
+| 73.1 | 10.255.1.4 |
 
 | BGP Tuning |
 | ---------- |
@@ -616,7 +616,7 @@ ASN Notation: asplain
 | Settings | Value |
 | -------- | ----- |
 | Address Family | mpls |
-| Remote AS | 65001 |
+| Remote AS | 73.1 |
 | Source | Loopback0 |
 | BFD | True |
 | Send community | all |
@@ -659,13 +659,14 @@ ASN Notation: asplain
 
 ```eos
 !
-router bgp 65001
+router bgp 73.1
+   bgp asn notation asdot
    router-id 10.255.1.4
    update wait-install
    no bgp default ipv4-unicast
    maximum-paths 4 ecmp 4
    neighbor MPLS-OVERLAY-PEERS peer group
-   neighbor MPLS-OVERLAY-PEERS remote-as 65001
+   neighbor MPLS-OVERLAY-PEERS remote-as 73.1
    neighbor MPLS-OVERLAY-PEERS update-source Loopback0
    neighbor MPLS-OVERLAY-PEERS bfd
    neighbor MPLS-OVERLAY-PEERS password 7 <removed>
