--- a/config-builder/documentation/devices/s2-p02.md
+++ b/config-builder/documentation/devices/s2-p02.md
@@ -551,17 +551,17 @@ router isis CORE
 
 ### Router BGP
 
-ASN Notation: asplain
+ASN Notation: asdot
 
 #### Router BGP Summary
 
 | BGP AS | Router ID |
 | ------ | --------- |
-| 65001 | 10.255.0.4 |
+| 73.1 | 10.255.0.4 |
 
 | BGP AS | Cluster ID |
 | ------ | --------- |
-| 65001 | 10.255.0.4 |
+| 73.1 | 10.255.0.4 |
 
 | BGP Tuning |
 | ---------- |
@@ -576,7 +576,7 @@ ASN Notation: asplain
 | Settings | Value |
 | -------- | ----- |
 | Address Family | mpls |
-| Remote AS | 65001 |
+| Remote AS | 73.1 |
 | Route Reflector Client | Yes |
 | Source | Loopback0 |
 | BFD | True |
@@ -588,7 +588,7 @@ ASN Notation: asplain
 | Settings | Value |
 | -------- | ----- |
 | Address Family | mpls |
-| Remote AS | 65001 |
+| Remote AS | 73.1 |
 | Source | Loopback0 |
 | BFD | True |
 | Send community | all |
@@ -624,14 +624,15 @@ ASN Notation: asplain
 
 ```eos
 !
-router bgp 65001
+router bgp 73.1
+   bgp asn notation asdot
    router-id 10.255.0.4
    update wait-install
    no bgp default ipv4-unicast
    bgp cluster-id 10.255.0.4
    maximum-paths 4 ecmp 4
    neighbor MPLS-OVERLAY-PEERS peer group
-   neighbor MPLS-OVERLAY-PEERS remote-as 65001
+   neighbor MPLS-OVERLAY-PEERS remote-as 73.1
    neighbor MPLS-OVERLAY-PEERS update-source Loopback0
    neighbor MPLS-OVERLAY-PEERS bfd
    neighbor MPLS-OVERLAY-PEERS route-reflector-client
@@ -639,7 +640,7 @@ router bgp 65001
    neighbor MPLS-OVERLAY-PEERS send-community
    neighbor MPLS-OVERLAY-PEERS maximum-routes 0
    neighbor RR-OVERLAY-PEERS peer group
-   neighbor RR-OVERLAY-PEERS remote-as 65001
+   neighbor RR-OVERLAY-PEERS remote-as 73.1
    neighbor RR-OVERLAY-PEERS update-source Loopback0
    neighbor RR-OVERLAY-PEERS bfd
    neighbor RR-OVERLAY-PEERS send-community
