work on inventory cleanup + eapi access

--- a/config-builder/documentation/devices/s1-ce03.md
+++ b/config-builder/documentation/devices/s1-ce03.md
@@ -37,13 +37,13 @@
 
 | Management Interface | Description | Type | VRF | IP Address | Gateway |
 | -------------------- | ----------- | ---- | --- | ---------- | ------- |
-| Management0 | oob_management | oob | default | 192.168.2.213/24 | 192.168.2.1 |
+| Management0 | oob_management | oob | MGMT | 192.168.2.213/24 | 192.168.2.1 |
 
 ##### IPv6
 
 | Management Interface | Description | Type | VRF | IPv6 Address | IPv6 Gateway |
 | -------------------- | ----------- | ---- | --- | ------------ | ------------ |
-| Management0 | oob_management | oob | default | - | - |
+| Management0 | oob_management | oob | MGMT | - | - |
 
 #### Management Interfaces Device Configuration
 
@@ -52,6 +52,7 @@
 interface Management0
    description oob_management
    no shutdown
+   vrf MGMT
    ip address 192.168.2.213/24
 ```
 
@@ -80,19 +81,25 @@ dns domain atd.lab
 
 | Server | VRF | Preferred | Burst | iBurst | Version | Min Poll | Max Poll | Local-interface | Key |
 | ------ | --- | --------- | ----- | ------ | ------- | -------- | -------- | --------------- | --- |
-| fr.pool.ntp.org | default | True | True | True | - | - | - | Management0 | - |
-| uk.pool.ntp.org | default | - | True | True | - | - | - | Management0 | - |
+| 5.39.80.51 | MGMT | - | True | True | - | - | - | Management0 | - |
+| 193.52.136.2 | MGMT | True | True | True | - | - | - | Management0 | - |
 
 #### NTP Device Configuration
 
 ```eos
 !
 ntp local-interface Management0
-ntp server fr.pool.ntp.org prefer burst iburst local-interface Management0
-ntp server uk.pool.ntp.org burst iburst local-interface Management0
+ntp server vrf MGMT 5.39.80.51 burst iburst local-interface Management0
+ntp server vrf MGMT 193.52.136.2 prefer burst iburst local-interface Management0
 ```
 
 ### Management SSH
+
+#### Authentication Settings
+
+| Authentication protocols | Empty passwords |
+| ------------------------ | --------------- |
+| keyboard-interactive, public-key | permit |
 
 #### SSH Timeout and Management
 
@@ -116,16 +123,17 @@ ntp server uk.pool.ntp.org burst iburst local-interface Management0
 
 | VRF | Status |
 | --- | ------ |
-| default | Enabled |
+| MGMT | Enabled |
 
 #### Management SSH Device Configuration
 
 ```eos
 !
 management ssh
+   authentication empty-passwords permit
    no shutdown
    !
-   vrf default
+   vrf MGMT
       no shutdown
 ```
 
@@ -141,7 +149,7 @@ management ssh
 
 | VRF Name | IPv4 ACL | IPv6 ACL |
 | -------- | -------- | -------- |
-| default | - | - |
+| MGMT | - | - |
 
 #### Management API HTTP Device Configuration
 
@@ -151,7 +159,7 @@ management api http-commands
    protocol https
    no shutdown
    !
-   vrf default
+   vrf MGMT
       no shutdown
 ```
 
@@ -215,7 +223,7 @@ alias sli show lacp interface Ethernet %1 detailed
 alias sqnz show interface counter queue | nz
 alias srnz show interface counter rate | nz
 alias summary show bgp summary
-
+alias summary6 show ipv6 bgp summary
 !
 ```
 
