--- a/config-builder/documentation/devices/s1-p02.md
+++ b/config-builder/documentation/devices/s1-p02.md
@@ -48,19 +48,19 @@
 
 | Management Interface | Description | Type | VRF | IP Address | Gateway |
 | -------------------- | ----------- | ---- | --- | ---------- | ------- |
-| Management1 | OOB_MANAGEMENT | oob | MGMT | 192.168.2.112/24 | - |
+| Management0 | OOB_MANAGEMENT | oob | MGMT | 192.168.2.112/24 | 192.168.2.1 |
 
 ##### IPv6
 
 | Management Interface | Description | Type | VRF | IPv6 Address | IPv6 Gateway |
 | -------------------- | ----------- | ---- | --- | ------------ | ------------ |
-| Management1 | OOB_MANAGEMENT | oob | MGMT | - | - |
+| Management0 | OOB_MANAGEMENT | oob | MGMT | - | - |
 
 #### Management Interfaces Device Configuration
 
 ```eos
 !
-interface Management1
+interface Management0
    description OOB_MANAGEMENT
    no shutdown
    vrf MGMT
@@ -121,19 +121,25 @@ clock timezone Europe/Paris
 
 | Server | VRF | Preferred | Burst | iBurst | Version | Min Poll | Max Poll | Local-interface | Key |
 | ------ | --- | --------- | ----- | ------ | ------- | -------- | -------- | --------------- | --- |
-| fr.pool.ntp.org | default | True | True | True | - | - | - | Management0 | - |
-| uk.pool.ntp.org | default | - | True | True | - | - | - | Management0 | - |
+| 5.39.80.51 | MGMT | - | True | True | - | - | - | Management0 | - |
+| 193.52.136.2 | MGMT | True | True | True | - | - | - | Management0 | - |
 
 #### NTP Device Configuration
 
 ```eos
 !
 ntp local-interface Management0
-ntp server fr.pool.ntp.org prefer burst iburst local-interface Management0
-ntp server uk.pool.ntp.org burst iburst local-interface Management0
+ntp server vrf MGMT 5.39.80.51 burst iburst local-interface Management0
+ntp server vrf MGMT 193.52.136.2 prefer burst iburst local-interface Management0
 ```
 
 ### Management SSH
+
+#### Authentication Settings
+
+| Authentication protocols | Empty passwords |
+| ------------------------ | --------------- |
+| keyboard-interactive, public-key | permit |
 
 #### SSH Timeout and Management
 
@@ -157,16 +163,17 @@ ntp server uk.pool.ntp.org burst iburst local-interface Management0
 
 | VRF | Status |
 | --- | ------ |
-| default | Enabled |
+| MGMT | Enabled |
 
 #### Management SSH Device Configuration
 
 ```eos
 !
 management ssh
+   authentication empty-passwords permit
    no shutdown
    !
-   vrf default
+   vrf MGMT
       no shutdown
 ```
 
@@ -500,13 +507,13 @@ no ip routing vrf MGMT
 
 | VRF | Destination Prefix | Next Hop IP | Exit interface | Administrative Distance | Tag | Route Name | Metric |
 | --- | ------------------ | ----------- | -------------- | ----------------------- | --- | ---------- | ------ |
-| default | 0.0.0.0/0 | 192.168.2.1 | - | 1 | - | - | - |
+| MGMT | 10.73.0.0/16 | 192.168.2.1 | - | 1 | - | - | - |
 
 #### Static Routes Device Configuration
 
 ```eos
 !
-ip route 0.0.0.0/0 192.168.2.1
+ip route vrf MGMT 10.73.0.0/16 192.168.2.1
 ```
 
 ### Router ISIS
