--- a/config-builder/documentation/devices/s1-pe02.md
+++ b/config-builder/documentation/devices/s1-pe02.md
@@ -57,19 +57,19 @@
 
 | Management Interface | Description | Type | VRF | IP Address | Gateway |
 | -------------------- | ----------- | ---- | --- | ---------- | ------- |
-| Management1 | OOB_MANAGEMENT | oob | MGMT | 192.168.2.12/24 | - |
+| Management0 | OOB_MANAGEMENT | oob | MGMT | 192.168.2.12/24 | 192.168.2.1 |
 
 ##### IPv6
 
 | Management Interface | Description | Type | VRF | IPv6 Address | IPv6 Gateway |
 | -------------------- | ----------- | ---- | --- | ------------ | ------------ |
-| Management1 | OOB_MANAGEMENT | oob | MGMT | - | - |
+| Management0 | OOB_MANAGEMENT | oob | MGMT | - | - |
 
 #### Management Interfaces Device Configuration
 
 ```eos
 !
-interface Management1
+interface Management0
    description OOB_MANAGEMENT
    no shutdown
    vrf MGMT
@@ -130,19 +130,25 @@ clock timezone Europe/Paris
 
 | Server | VRF | Preferred | Burst | iBurst | Version | Min Poll | Max Poll | Local-interface | Key |
 | ------ | --- | --------- | ----- | ------ | ------- | -------- | -------- | --------------- | --- |
-| fr.pool.ntp.org | default | True | True | True | - | - | - | Management0 | - |
-| uk.pool.ntp.org | default | - | True | True | - | - | - | Management0 | - |
+| 5.39.80.51 | MGMT | - | True | True | - | - | - | Management0 | - |
+| 193.52.136.2 | MGMT | True | True | True | - | - | - | Management0 | - |
 
 #### NTP Device Configuration
 
 ```eos
 !
 ntp local-interface Management0
-ntp server fr.pool.ntp.org prefer burst iburst local-interface Management0
-ntp server uk.pool.ntp.org burst iburst local-interface Management0
+ntp server vrf MGMT 5.39.80.51 burst iburst local-interface Management0
+ntp server vrf MGMT 193.52.136.2 prefer burst iburst local-interface Management0
 ```
 
 ### Management SSH
+
+#### Authentication Settings
+
+| Authentication protocols | Empty passwords |
+| ------------------------ | --------------- |
+| keyboard-interactive, public-key | permit |
 
 #### SSH Timeout and Management
 
@@ -166,16 +172,17 @@ ntp server uk.pool.ntp.org burst iburst local-interface Management0
 
 | VRF | Status |
 | --- | ------ |
-| default | Enabled |
+| MGMT | Enabled |
 
 #### Management SSH Device Configuration
 
 ```eos
 !
 management ssh
+   authentication empty-passwords permit
    no shutdown
    !
-   vrf default
+   vrf MGMT
       no shutdown
 ```
 
@@ -514,13 +521,13 @@ ip routing vrf SVC01_VRF01
 
 | VRF | Destination Prefix | Next Hop IP | Exit interface | Administrative Distance | Tag | Route Name | Metric |
 | --- | ------------------ | ----------- | -------------- | ----------------------- | --- | ---------- | ------ |
-| default | 0.0.0.0/0 | 192.168.2.1 | - | 1 | - | - | - |
+| MGMT | 10.73.0.0/16 | 192.168.2.1 | - | 1 | - | - | - |
 
 #### Static Routes Device Configuration
 
 ```eos
 !
-ip route 0.0.0.0/0 192.168.2.1
+ip route vrf MGMT 10.73.0.0/16 192.168.2.1
 ```
 
 ### Router ISIS
@@ -601,7 +608,7 @@ ASN Notation: asdot
 
 | BGP AS | Router ID |
 | ------ | --------- |
-| 73.1 | 10.255.1.2 |
+| 65000 | 10.255.1.2 |
 
 | BGP Tuning |
 | ---------- |
@@ -616,7 +623,7 @@ ASN Notation: asdot
 | Settings | Value |
 | -------- | ----- |
 | Address Family | mpls |
-| Remote AS | 73.1 |
+| Remote AS | 65000 |
 | Source | Loopback0 |
 | BFD | True |
 | Send community | all |
@@ -659,14 +666,14 @@ ASN Notation: asdot
 
 ```eos
 !
-router bgp 73.1
+router bgp 65000
    bgp asn notation asdot
    router-id 10.255.1.2
    update wait-install
    no bgp default ipv4-unicast
    maximum-paths 4 ecmp 4
    neighbor MPLS-OVERLAY-PEERS peer group
-   neighbor MPLS-OVERLAY-PEERS remote-as 73.1
+   neighbor MPLS-OVERLAY-PEERS remote-as 65000
    neighbor MPLS-OVERLAY-PEERS update-source Loopback0
    neighbor MPLS-OVERLAY-PEERS bfd
    neighbor MPLS-OVERLAY-PEERS password 7 <removed>
