--- a/config-builder/documentation/devices/s2-p02.md
+++ b/config-builder/documentation/devices/s2-p02.md
@@ -50,19 +50,19 @@
 
 | Management Interface | Description | Type | VRF | IP Address | Gateway |
 | -------------------- | ----------- | ---- | --- | ---------- | ------- |
-| Management1 | OOB_MANAGEMENT | oob | MGMT | 192.168.2.122/24 | - |
+| Management0 | OOB_MANAGEMENT | oob | MGMT | 192.168.2.122/24 | 192.168.2.1 |
 
 ##### IPv6
 
 | Management Interface | Description | Type | VRF | IPv6 Address | IPv6 Gateway |
 | -------------------- | ----------- | ---- | --- | ------------ | ------------ |
-| Management1 | OOB_MANAGEMENT | oob | MGMT | - | - |
+| Management0 | OOB_MANAGEMENT | oob | MGMT | - | - |
 
 #### Management Interfaces Device Configuration
 
 ```eos
 !
-interface Management1
+interface Management0
    description OOB_MANAGEMENT
    no shutdown
    vrf MGMT
@@ -123,19 +123,25 @@ clock timezone Europe/Paris
 
 | Server | VRF | Preferred | Burst | iBurst | Version | Min Poll | Max Poll | Local-interface | Key |
 | ------ | --- | --------- | ----- | ------ | ------- | -------- | -------- | --------------- | --- |
-| fr.pool.ntp.org | default | True | True | True | - | - | - | Management0 | - |
-| uk.pool.ntp.org | default | - | True | True | - | - | - | Management0 | - |
+| 5.39.80.51 | MGMT | - | True | True | - | - | - | Management0 | - |
+| 193.52.136.2 | MGMT | True | True | True | - | - | - | Management0 | - |
 
 #### NTP Device Configuration
 
 ```eos
 !
 ntp local-interface Management0
-ntp server fr.pool.ntp.org prefer burst iburst local-interface Management0
-ntp server uk.pool.ntp.org burst iburst local-interface Management0
+ntp server vrf MGMT 5.39.80.51 burst iburst local-interface Management0
+ntp server vrf MGMT 193.52.136.2 prefer burst iburst local-interface Management0
 ```
 
 ### Management SSH
+
+#### Authentication Settings
+
+| Authentication protocols | Empty passwords |
+| ------------------------ | --------------- |
+| keyboard-interactive, public-key | permit |
 
 #### SSH Timeout and Management
 
@@ -159,16 +165,17 @@ ntp server uk.pool.ntp.org burst iburst local-interface Management0
 
 | VRF | Status |
 | --- | ------ |
-| default | Enabled |
+| MGMT | Enabled |
 
 #### Management SSH Device Configuration
 
 ```eos
 !
 management ssh
+   authentication empty-passwords permit
    no shutdown
    !
-   vrf default
+   vrf MGMT
       no shutdown
 ```
 
@@ -468,13 +475,13 @@ no ip routing vrf MGMT
 
 | VRF | Destination Prefix | Next Hop IP | Exit interface | Administrative Distance | Tag | Route Name | Metric |
 | --- | ------------------ | ----------- | -------------- | ----------------------- | --- | ---------- | ------ |
-| default | 0.0.0.0/0 | 192.168.2.1 | - | 1 | - | - | - |
+| MGMT | 10.73.0.0/16 | 192.168.2.1 | - | 1 | - | - | - |
 
 #### Static Routes Device Configuration
 
 ```eos
 !
-ip route 0.0.0.0/0 192.168.2.1
+ip route vrf MGMT 10.73.0.0/16 192.168.2.1
 ```
 
 ### Router ISIS
@@ -557,11 +564,11 @@ ASN Notation: asdot
 
 | BGP AS | Router ID |
 | ------ | --------- |
-| 73.1 | 10.255.0.4 |
+| 65000 | 10.255.0.4 |
 
 | BGP AS | Cluster ID |
 | ------ | --------- |
-| 73.1 | 10.255.0.4 |
+| 65000 | 10.255.0.4 |
 
 | BGP Tuning |
 | ---------- |
@@ -576,7 +583,7 @@ ASN Notation: asdot
 | Settings | Value |
 | -------- | ----- |
 | Address Family | mpls |
-| Remote AS | 73.1 |
+| Remote AS | 65000 |
 | Route Reflector Client | Yes |
 | Source | Loopback0 |
 | BFD | True |
@@ -588,7 +595,7 @@ ASN Notation: asdot
 | Settings | Value |
 | -------- | ----- |
 | Address Family | mpls |
-| Remote AS | 73.1 |
+| Remote AS | 65000 |
 | Source | Loopback0 |
 | BFD | True |
 | Send community | all |
@@ -624,7 +631,7 @@ ASN Notation: asdot
 
 ```eos
 !
-router bgp 73.1
+router bgp 65000
    bgp asn notation asdot
    router-id 10.255.0.4
    update wait-install
@@ -632,7 +639,7 @@ router bgp 73.1
    bgp cluster-id 10.255.0.4
    maximum-paths 4 ecmp 4
    neighbor MPLS-OVERLAY-PEERS peer group
-   neighbor MPLS-OVERLAY-PEERS remote-as 73.1
+   neighbor MPLS-OVERLAY-PEERS remote-as 65000
    neighbor MPLS-OVERLAY-PEERS update-source Loopback0
    neighbor MPLS-OVERLAY-PEERS bfd
    neighbor MPLS-OVERLAY-PEERS route-reflector-client
@@ -640,7 +647,7 @@ router bgp 73.1
    neighbor MPLS-OVERLAY-PEERS send-community
    neighbor MPLS-OVERLAY-PEERS maximum-routes 0
    neighbor RR-OVERLAY-PEERS peer group
-   neighbor RR-OVERLAY-PEERS remote-as 73.1
+   neighbor RR-OVERLAY-PEERS remote-as 65000
    neighbor RR-OVERLAY-PEERS update-source Loopback0
    neighbor RR-OVERLAY-PEERS bfd
    neighbor RR-OVERLAY-PEERS send-community
