feat(evpn): Add ETHERNET_VPN for L2.5 services across backbone

--- a/config-builder/documentation/devices/s1-ce03.md
+++ b/config-builder/documentation/devices/s1-ce03.md
@@ -17,7 +17,7 @@
   - [VLANs Device Configuration](#vlans-device-configuration)
 - [Interfaces](#interfaces)
   - [Ethernet Interfaces](#ethernet-interfaces)
-  - [Port-Channel Interfaces](#port-channel-interfaces)
+  - [VLAN Interfaces](#vlan-interfaces)
 - [Routing](#routing)
   - [Service Routing Protocols Model](#service-routing-protocols-model)
   - [IP Routing](#ip-routing)
@@ -233,18 +233,14 @@ alias summary6 show ipv6 bgp summary
 
 | VLAN ID | Name | Trunk Groups |
 | ------- | ---- | ------------ |
-| 1810 | S1-FW-XCO | - |
-| 2001 | BKP-SITE01 | - |
+| 1014 | SVC01_C1_VLAN_SITE01_PE04 | - |
 
 ### VLANs Device Configuration
 
 ```eos
 !
-vlan 1810
-   name S1-FW-XCO
-!
-vlan 2001
-   name BKP-SITE01
+vlan 1014
+   name SVC01_C1_VLAN_SITE01_PE04
 ```
 
 ## Interfaces
@@ -257,8 +253,6 @@ vlan 2001
 
 | Interface | Description | Mode | VLANs | Native VLAN | Trunk Group | Channel-Group |
 | --------- | ----------- | ---- | ----- | ----------- | ----------- | ------------- |
-| Ethernet1 | - | *trunk | *1018,2001 | *- | *- | 1 |
-| Ethernet2 | - | *trunk | *1018,2001 | *- | *- | 1 |
 
 *Inherited from Port-Channel Interface
 
@@ -267,30 +261,32 @@ vlan 2001
 ```eos
 !
 interface Ethernet1
-   channel-group 1 mode active
-!
-interface Ethernet2
-   channel-group 1 mode active
+   description to s1-pe04 ethernet4
 ```
 
-### Port-Channel Interfaces
+### VLAN Interfaces
 
-#### Port-Channel Interfaces Summary
+#### VLAN Interfaces Summary
 
-##### L2
+| Interface | Description | VRF |  MTU | Shutdown |
+| --------- | ----------- | --- | ---- | -------- |
+| Vlan1013 | SVC01_C1_VLAN_SITE01_PE04 - VRF ETHERNET_VPN | ETHERNET_VPN | - | False |
 
-| Interface | Description | Mode | VLANs | Native VLAN | Trunk Group | LACP Fallback Timeout | LACP Fallback Mode | MLAG ID | EVPN ESI |
-| --------- | ----------- | ---- | ----- | ----------- | ------------| --------------------- | ------------------ | ------- | -------- |
-| Port-Channel1 | to s1-pe01 - firewall test - vrrp | trunk | 1018,2001 | - | - | - | - | - | - |
+##### IPv4
 
-#### Port-Channel Interfaces Device Configuration
+| Interface | VRF | IP Address | IP Address Virtual | IP Router Virtual Address | ACL In | ACL Out |
+| --------- | --- | ---------- | ------------------ | ------------------------- | ------ | ------- |
+| Vlan1013 |  ETHERNET_VPN  |  10.1.4.13/24  |  -  |  -  |  -  |  -  |
+
+#### VLAN Interfaces Device Configuration
 
 ```eos
 !
-interface Port-Channel1
-   description to s1-pe01 - firewall test - vrrp
-   switchport trunk allowed vlan 1018,2001
-   switchport mode trunk
+interface Vlan1013
+   description SVC01_C1_VLAN_SITE01_PE04 - VRF ETHERNET_VPN
+   no shutdown
+   vrf ETHERNET_VPN
+   ip address 10.1.4.13/24
 ```
 
 ## Routing
@@ -311,16 +307,16 @@ service routing protocols model multi-agent
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | True |
-| BKP | True |
-| FW-HA | True |
+| ETHERNET_VPN | True |
+| MGMT | True |
 
 #### IP Routing Device Configuration
 
 ```eos
 !
 ip routing
-ip routing vrf BKP
-ip routing vrf FW-HA
+ip routing vrf ETHERNET_VPN
+ip routing vrf MGMT
 ```
 
 ### IPv6 Routing
@@ -330,8 +326,9 @@ ip routing vrf FW-HA
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | False |
-| BKP | false |
-| FW-HA | false |
+| default | false |
+| ETHERNET_VPN | false |
+| MGMT | false |
 
 ### Static Routes
 
@@ -339,17 +336,15 @@ ip routing vrf FW-HA
 
 | VRF | Destination Prefix | Next Hop IP | Exit interface | Administrative Distance | Tag | Route Name | Metric |
 | --- | ------------------ | ----------- | -------------- | ----------------------- | --- | ---------- | ------ |
-| FW-HA | 0.0.0.0/0 | 10.18.10.1 | - | 1 | - | - | - |
-| BKP | 0.0.0.0/0 | 10.200.1.1 | - | 1 | - | - | - |
-| default | 0.0.0.0/0 | 192.168.2.1 | - | 1 | - | - | - |
+| MGMT | 0.0.0.0/0 | 192.168.2.1 | - | 1 | - | - | - |
+| ETHERNET_VPN | 0.0.0.0/0 | 10.1.4.1 | - | 1 | - | - | - |
 
 #### Static Routes Device Configuration
 
 ```eos
 !
-ip route 0.0.0.0/0 192.168.2.1
-ip route vrf BKP 0.0.0.0/0 10.200.1.1
-ip route vrf FW-HA 0.0.0.0/0 10.18.10.1
+ip route vrf ETHERNET_VPN 0.0.0.0/0 10.1.4.1
+ip route vrf MGMT 0.0.0.0/0 192.168.2.1
 ```
 
 ## VRF Instances
@@ -358,16 +353,14 @@ ip route vrf FW-HA 0.0.0.0/0 10.18.10.1
 
 | VRF Name | IP Routing |
 | -------- | ---------- |
-| BKP | enabled |
-| FW-HA | enabled |
+| ETHERNET_VPN | enabled |
+| MGMT | enabled |
 
 ### VRF Instances Device Configuration
 
 ```eos
 !
-vrf instance BKP
-   description BACKUP VRF
+vrf instance ETHERNET_VPN
 !
-vrf instance FW-HA
-   description FW-HA VRF
+vrf instance MGMT
 ```
