--- a/config-builder/documentation/devices/s1-pe02.md
+++ b/config-builder/documentation/devices/s1-pe02.md
@@ -21,13 +21,9 @@
 - [Internal VLAN Allocation Policy](#internal-vlan-allocation-policy)
   - [Internal VLAN Allocation Policy Summary](#internal-vlan-allocation-policy-summary)
   - [Internal VLAN Allocation Policy Device Configuration](#internal-vlan-allocation-policy-device-configuration)
-- [VLANs](#vlans)
-  - [VLANs Summary](#vlans-summary)
-  - [VLANs Device Configuration](#vlans-device-configuration)
 - [Interfaces](#interfaces)
   - [Ethernet Interfaces](#ethernet-interfaces)
   - [Loopback Interfaces](#loopback-interfaces)
-  - [VLAN Interfaces](#vlan-interfaces)
 - [Routing](#routing)
   - [Service Routing Protocols Model](#service-routing-protocols-model)
   - [Virtual Router MAC Address](#virtual-router-mac-address)
@@ -308,22 +304,6 @@ spanning-tree mode none
 vlan internal order ascending range 1006 1199
 ```
 
-## VLANs
-
-### VLANs Summary
-
-| VLAN ID | Name | Trunk Groups |
-| ------- | ---- | ------------ |
-| 1811 | SVC01_C1_VLAN_FIREWALL | - |
-
-### VLANs Device Configuration
-
-```eos
-!
-vlan 1811
-   name SVC01_C1_VLAN_FIREWALL
-```
-
 ## Interfaces
 
 ### Ethernet Interfaces
@@ -334,7 +314,7 @@ vlan 1811
 
 | Interface | Description | Mode | VLANs | Native VLAN | Trunk Group | Channel-Group |
 | --------- | ----------- | ---- | ----- | ----------- | ----------- | ------------- |
-| Ethernet4 | ROUTER_s1-ce02_eth1 | trunk | 1018 | - | - | - |
+| Ethernet4 | ROUTER_s1-ce02_eth1 | trunk | 1-4094 | - | - | - |
 
 *Inherited from Port-Channel Interface
 
@@ -389,7 +369,7 @@ interface Ethernet2
 interface Ethernet4
    description ROUTER_s1-ce02_eth1
    no shutdown
-   switchport trunk allowed vlan 1018
+   switchport trunk allowed vlan 1-4094
    switchport mode trunk
    switchport
 ```
@@ -403,14 +383,12 @@ interface Ethernet4
 | Interface | Description | VRF | IP Address |
 | --------- | ----------- | --- | ---------- |
 | Loopback0 | ROUTER_ID | default | 10.255.1.2/32 |
-| Loopback1810 | Test loopback | SVC01_VRF01 | 10.18.0.2/32 |
 
 ##### IPv6
 
 | Interface | Description | VRF | IPv6 Address |
 | --------- | ----------- | --- | ------------ |
 | Loopback0 | ROUTER_ID | default | - |
-| Loopback1810 | Test loopback | SVC01_VRF01 | - |
 
 ##### ISIS
 
@@ -429,37 +407,6 @@ interface Loopback0
    node-segment ipv4 index 2
    isis enable CORE
    isis passive
-!
-interface Loopback1810
-   description Test loopback
-   no shutdown
-   vrf SVC01_VRF01
-   ip address 10.18.0.2/32
-```
-
-### VLAN Interfaces
-
-#### VLAN Interfaces Summary
-
-| Interface | Description | VRF |  MTU | Shutdown |
-| --------- | ----------- | --- | ---- | -------- |
-| Vlan1811 | SVC01_C1_VLAN_FIREWALL | SVC01_VRF01 | - | False |
-
-##### IPv4
-
-| Interface | VRF | IP Address | IP Address Virtual | IP Router Virtual Address | ACL In | ACL Out |
-| --------- | --- | ---------- | ------------------ | ------------------------- | ------ | ------- |
-| Vlan1811 |  SVC01_VRF01  |  -  |  10.18.11.1/24  |  -  |  -  |  -  |
-
-#### VLAN Interfaces Device Configuration
-
-```eos
-!
-interface Vlan1811
-   description SVC01_C1_VLAN_FIREWALL
-   no shutdown
-   vrf SVC01_VRF01
-   ip address virtual 10.18.11.1/24
 ```
 
 ## Routing
@@ -494,7 +441,6 @@ ip virtual-router mac-address 00:1c:73:00:dc:00
 | --- | --------------- |
 | default | True |
 | MGMT | False |
-| SVC01_VRF01 | True |
 
 #### IP Routing Device Configuration
 
@@ -502,7 +448,6 @@ ip virtual-router mac-address 00:1c:73:00:dc:00
 !
 ip routing
 no ip routing vrf MGMT
-ip routing vrf SVC01_VRF01
 ```
 
 ### IPv6 Routing
@@ -513,7 +458,6 @@ ip routing vrf SVC01_VRF01
 | --- | --------------- |
 | default | False |
 | MGMT | false |
-| SVC01_VRF01 | false |
 
 ### Static Routes
 
@@ -650,18 +594,6 @@ ASN Notation: asdot
 | ------------------------------ | ------------------------------ |
 | mpls | Loopback0 |
 
-#### Router BGP VLANs
-
-| VLAN | Route-Distinguisher | Both Route-Target | Import Route Target | Export Route-Target | Redistribute |
-| ---- | ------------------- | ----------------- | ------------------- | ------------------- | ------------ |
-| 1811 | 10.255.1.2:11811 | 11811:11811 | - | - | learned |
-
-#### Router BGP VRFs
-
-| VRF | Route-Distinguisher | Redistribute |
-| --- | ------------------- | ------------ |
-| SVC01_VRF01 | 10.255.1.2:10 | connected |
-
 #### Router BGP Device Configuration
 
 ```eos
@@ -684,24 +616,12 @@ router bgp 65000
    neighbor 10.255.0.4 peer group MPLS-OVERLAY-PEERS
    neighbor 10.255.0.4 description s2-p02_Loopback0
    !
-   vlan 1811
-      rd 10.255.1.2:11811
-      route-target both 11811:11811
-      redistribute learned
-   !
    address-family evpn
       neighbor default encapsulation mpls next-hop-self source-interface Loopback0
       neighbor MPLS-OVERLAY-PEERS activate
    !
    address-family ipv4
       no neighbor MPLS-OVERLAY-PEERS activate
-   !
-   vrf SVC01_VRF01
-      rd 10.255.1.2:10
-      route-target import evpn 10:10
-      route-target export evpn 10:10
-      router-id 10.255.1.2
-      redistribute connected
 ```
 
 ## BFD
@@ -772,13 +692,10 @@ mpls ip
 | VRF Name | IP Routing |
 | -------- | ---------- |
 | MGMT | disabled |
-| SVC01_VRF01 | enabled |
 
 ### VRF Instances Device Configuration
 
 ```eos
 !
 vrf instance MGMT
-!
-vrf instance SVC01_VRF01
 ```
