--- a/config-builder/documentation/devices/s1-ce01.md
+++ b/config-builder/documentation/devices/s1-ce01.md
@@ -12,12 +12,8 @@
   - [Local Users](#local-users)
   - [AAA Authorization](#aaa-authorization)
 - [Aliases Device Configuration](#aliases-device-configuration)
-- [VLANs](#vlans)
-  - [VLANs Summary](#vlans-summary)
-  - [VLANs Device Configuration](#vlans-device-configuration)
 - [Interfaces](#interfaces)
   - [Ethernet Interfaces](#ethernet-interfaces)
-  - [Port-Channel Interfaces](#port-channel-interfaces)
 - [Routing](#routing)
   - [Service Routing Protocols Model](#service-routing-protocols-model)
   - [IP Routing](#ip-routing)
@@ -227,26 +223,6 @@ alias summary6 show ipv6 bgp summary
 !
 ```
 
-## VLANs
-
-### VLANs Summary
-
-| VLAN ID | Name | Trunk Groups |
-| ------- | ---- | ------------ |
-| 1810 | S1-FW-XCO | - |
-| 2001 | BKP-SITE01 | - |
-
-### VLANs Device Configuration
-
-```eos
-!
-vlan 1810
-   name S1-FW-XCO
-!
-vlan 2001
-   name BKP-SITE01
-```
-
 ## Interfaces
 
 ### Ethernet Interfaces
@@ -257,8 +233,6 @@ vlan 2001
 
 | Interface | Description | Mode | VLANs | Native VLAN | Trunk Group | Channel-Group |
 | --------- | ----------- | ---- | ----- | ----------- | ----------- | ------------- |
-| Ethernet1 | - | *trunk | *1018,2001 | *- | *- | 1 |
-| Ethernet2 | - | *trunk | *1018,2001 | *- | *- | 1 |
 
 *Inherited from Port-Channel Interface
 
@@ -267,29 +241,8 @@ vlan 2001
 ```eos
 !
 interface Ethernet1
-   channel-group 1 mode active
-!
-interface Ethernet2
-   channel-group 1 mode active
-```
-
-### Port-Channel Interfaces
-
-#### Port-Channel Interfaces Summary
-
-##### L2
-
-| Interface | Description | Mode | VLANs | Native VLAN | Trunk Group | LACP Fallback Timeout | LACP Fallback Mode | MLAG ID | EVPN ESI |
-| --------- | ----------- | ---- | ----- | ----------- | ------------| --------------------- | ------------------ | ------- | -------- |
-| Port-Channel1 | to s1-pe01 - firewall test - vrrp | trunk | 1018,2001 | - | - | - | - | - | - |
-
-#### Port-Channel Interfaces Device Configuration
-
-```eos
-!
-interface Port-Channel1
-   description to s1-pe01 - firewall test - vrrp
-   switchport trunk allowed vlan 1018,2001
+   description to s1-pe01 ethernet4
+   switchport trunk allowed vlan 1-4094
    switchport mode trunk
 ```
 
@@ -311,16 +264,16 @@ service routing protocols model multi-agent
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | True |
-| BKP | True |
-| FW-HA | True |
+| ETHERNET_VPN | True |
+| MGMT | True |
 
 #### IP Routing Device Configuration
 
 ```eos
 !
 ip routing
-ip routing vrf BKP
-ip routing vrf FW-HA
+ip routing vrf ETHERNET_VPN
+ip routing vrf MGMT
 ```
 
 ### IPv6 Routing
@@ -330,8 +283,9 @@ ip routing vrf FW-HA
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | False |
-| BKP | false |
-| FW-HA | false |
+| default | false |
+| ETHERNET_VPN | false |
+| MGMT | false |
 
 ### Static Routes
 
@@ -339,17 +293,13 @@ ip routing vrf FW-HA
 
 | VRF | Destination Prefix | Next Hop IP | Exit interface | Administrative Distance | Tag | Route Name | Metric |
 | --- | ------------------ | ----------- | -------------- | ----------------------- | --- | ---------- | ------ |
-| FW-HA | 0.0.0.0/0 | 10.18.10.1 | - | 1 | - | - | - |
-| BKP | 0.0.0.0/0 | 10.200.1.1 | - | 1 | - | - | - |
-| default | 0.0.0.0/0 | 192.168.2.1 | - | 1 | - | - | - |
+| MGMT | 0.0.0.0/0 | 192.168.2.1 | - | 1 | - | - | - |
 
 #### Static Routes Device Configuration
 
 ```eos
 !
-ip route 0.0.0.0/0 192.168.2.1
-ip route vrf BKP 0.0.0.0/0 10.200.1.1
-ip route vrf FW-HA 0.0.0.0/0 10.18.10.1
+ip route vrf MGMT 0.0.0.0/0 192.168.2.1
 ```
 
 ## VRF Instances
@@ -358,16 +308,14 @@ ip route vrf FW-HA 0.0.0.0/0 10.18.10.1
 
 | VRF Name | IP Routing |
 | -------- | ---------- |
-| BKP | enabled |
-| FW-HA | enabled |
+| ETHERNET_VPN | enabled |
+| MGMT | enabled |
 
 ### VRF Instances Device Configuration
 
 ```eos
 !
-vrf instance BKP
-   description BACKUP VRF
+vrf instance ETHERNET_VPN
 !
-vrf instance FW-HA
-   description FW-HA VRF
+vrf instance MGMT
 ```
