--- a/config-builder/documentation/devices/s1-pe03.md
+++ b/config-builder/documentation/devices/s1-pe03.md
@@ -314,14 +314,14 @@ vlan internal order ascending range 1006 1199
 
 | VLAN ID | Name | Trunk Groups |
 | ------- | ---- | ------------ |
-| 1811 | SVC01_C1_VLAN_FIREWALL | - |
+| 1013 | SVC01_C1_VLAN_SITE01_PE03 | - |
 
 ### VLANs Device Configuration
 
 ```eos
 !
-vlan 1811
-   name SVC01_C1_VLAN_FIREWALL
+vlan 1013
+   name SVC01_C1_VLAN_SITE01_PE03
 ```
 
 ## Interfaces
@@ -334,7 +334,7 @@ vlan 1811
 
 | Interface | Description | Mode | VLANs | Native VLAN | Trunk Group | Channel-Group |
 | --------- | ----------- | ---- | ----- | ----------- | ----------- | ------------- |
-| Ethernet4 | ROUTER_s1-ce03_eth1 | trunk | 1018 | - | - | - |
+| Ethernet4 | ROUTER_s1-ce03_eth1 | trunk | 1-4094 | - | - | - |
 
 *Inherited from Port-Channel Interface
 
@@ -389,7 +389,7 @@ interface Ethernet2
 interface Ethernet4
    description ROUTER_s1-ce03_eth1
    no shutdown
-   switchport trunk allowed vlan 1018
+   switchport trunk allowed vlan 1-4094
    switchport mode trunk
    switchport
 ```
@@ -403,14 +403,14 @@ interface Ethernet4
 | Interface | Description | VRF | IP Address |
 | --------- | ----------- | --- | ---------- |
 | Loopback0 | ROUTER_ID | default | 10.255.1.3/32 |
-| Loopback1810 | Test loopback | SVC01_VRF01 | 10.18.0.3/32 |
+| Loopback1001 | SVC_ETHERNET_LOOPBACK | ETHERNET_VPN | 10.1.255.3/32 |
 
 ##### IPv6
 
 | Interface | Description | VRF | IPv6 Address |
 | --------- | ----------- | --- | ------------ |
 | Loopback0 | ROUTER_ID | default | - |
-| Loopback1810 | Test loopback | SVC01_VRF01 | - |
+| Loopback1001 | SVC_ETHERNET_LOOPBACK | ETHERNET_VPN | - |
 
 ##### ISIS
 
@@ -430,11 +430,11 @@ interface Loopback0
    isis enable CORE
    isis passive
 !
-interface Loopback1810
-   description Test loopback
+interface Loopback1001
+   description SVC_ETHERNET_LOOPBACK
    no shutdown
-   vrf SVC01_VRF01
-   ip address 10.18.0.3/32
+   vrf ETHERNET_VPN
+   ip address 10.1.255.3/32
 ```
 
 ### VLAN Interfaces
@@ -443,23 +443,23 @@ interface Loopback1810
 
 | Interface | Description | VRF |  MTU | Shutdown |
 | --------- | ----------- | --- | ---- | -------- |
-| Vlan1811 | SVC01_C1_VLAN_FIREWALL | SVC01_VRF01 | - | False |
+| Vlan1013 | SVC01_C1_VLAN_SITE01_PE03 | ETHERNET_VPN | - | False |
 
 ##### IPv4
 
 | Interface | VRF | IP Address | IP Address Virtual | IP Router Virtual Address | ACL In | ACL Out |
 | --------- | --- | ---------- | ------------------ | ------------------------- | ------ | ------- |
-| Vlan1811 |  SVC01_VRF01  |  -  |  10.18.11.1/24  |  -  |  -  |  -  |
+| Vlan1013 |  ETHERNET_VPN  |  -  |  10.1.3.1/24  |  -  |  -  |  -  |
 
 #### VLAN Interfaces Device Configuration
 
 ```eos
 !
-interface Vlan1811
-   description SVC01_C1_VLAN_FIREWALL
+interface Vlan1013
+   description SVC01_C1_VLAN_SITE01_PE03
    no shutdown
-   vrf SVC01_VRF01
-   ip address virtual 10.18.11.1/24
+   vrf ETHERNET_VPN
+   ip address virtual 10.1.3.1/24
 ```
 
 ## Routing
@@ -493,16 +493,16 @@ ip virtual-router mac-address 00:1c:73:00:dc:00
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | True |
+| ETHERNET_VPN | True |
 | MGMT | False |
-| SVC01_VRF01 | True |
 
 #### IP Routing Device Configuration
 
 ```eos
 !
 ip routing
+ip routing vrf ETHERNET_VPN
 no ip routing vrf MGMT
-ip routing vrf SVC01_VRF01
 ```
 
 ### IPv6 Routing
@@ -512,8 +512,8 @@ ip routing vrf SVC01_VRF01
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | False |
+| ETHERNET_VPN | false |
 | MGMT | false |
-| SVC01_VRF01 | false |
 
 ### Static Routes
 
@@ -654,13 +654,13 @@ ASN Notation: asdot
 
 | VLAN | Route-Distinguisher | Both Route-Target | Import Route Target | Export Route-Target | Redistribute |
 | ---- | ------------------- | ----------------- | ------------------- | ------------------- | ------------ |
-| 1811 | 10.255.1.3:11811 | 11811:11811 | - | - | learned |
+| 1013 | 10.255.1.3:11013 | 11013:11013 | - | - | learned |
 
 #### Router BGP VRFs
 
 | VRF | Route-Distinguisher | Redistribute |
 | --- | ------------------- | ------------ |
-| SVC01_VRF01 | 10.255.1.3:10 | connected |
+| ETHERNET_VPN | 10.255.1.3:11 | connected |
 
 #### Router BGP Device Configuration
 
@@ -684,9 +684,9 @@ router bgp 65000
    neighbor 10.255.0.4 peer group MPLS-OVERLAY-PEERS
    neighbor 10.255.0.4 description s2-p02_Loopback0
    !
-   vlan 1811
-      rd 10.255.1.3:11811
-      route-target both 11811:11811
+   vlan 1013
+      rd 10.255.1.3:11013
+      route-target both 11013:11013
       redistribute learned
    !
    address-family evpn
@@ -696,10 +696,10 @@ router bgp 65000
    address-family ipv4
       no neighbor MPLS-OVERLAY-PEERS activate
    !
-   vrf SVC01_VRF01
-      rd 10.255.1.3:10
-      route-target import evpn 10:10
-      route-target export evpn 10:10
+   vrf ETHERNET_VPN
+      rd 10.255.1.3:11
+      route-target import evpn 11:11
+      route-target export evpn 11:11
       router-id 10.255.1.3
       redistribute connected
 ```
@@ -771,14 +771,14 @@ mpls ip
 
 | VRF Name | IP Routing |
 | -------- | ---------- |
+| ETHERNET_VPN | enabled |
 | MGMT | disabled |
-| SVC01_VRF01 | enabled |
 
 ### VRF Instances Device Configuration
 
 ```eos
 !
-vrf instance MGMT
+vrf instance ETHERNET_VPN
 !
-vrf instance SVC01_VRF01
+vrf instance MGMT
 ```
