--- a/config-builder/documentation/devices/s1-ce03.md
+++ b/config-builder/documentation/devices/s1-ce03.md
@@ -37,7 +37,7 @@
 
 | Management Interface | Description | Type | VRF | IP Address | Gateway |
 | -------------------- | ----------- | ---- | --- | ---------- | ------- |
-| Management0 | oob_management | oob | MGMT | 192.168.2.213/24 | 192.168.2.1 |
+| Management0 | oob_management | oob | MGMT | 192.168.2.212/24 | 192.168.2.1 |
 
 ##### IPv6
 
@@ -53,7 +53,7 @@ interface Management0
    description oob_management
    no shutdown
    vrf MGMT
-   ip address 192.168.2.213/24
+   ip address 192.168.2.212/24
 ```
 
 ### DNS Domain
@@ -233,14 +233,14 @@ alias summary6 show ipv6 bgp summary
 
 | VLAN ID | Name | Trunk Groups |
 | ------- | ---- | ------------ |
-| 1014 | SVC01_C1_VLAN_SITE01_PE04 | - |
+| 1013 | SVC01_C1_VLAN_SITE01_PE03 | - |
 
 ### VLANs Device Configuration
 
 ```eos
 !
-vlan 1014
-   name SVC01_C1_VLAN_SITE01_PE04
+vlan 1013
+   name SVC01_C1_VLAN_SITE01_PE03
 ```
 
 ## Interfaces
@@ -261,7 +261,9 @@ vlan 1014
 ```eos
 !
 interface Ethernet1
-   description to s1-pe04 ethernet4
+   description to s1-pe02 ethernet4
+   switchport trunk allowed vlan 1-4094
+   switchport mode trunk
 ```
 
 ### VLAN Interfaces
@@ -270,23 +272,23 @@ interface Ethernet1
 
 | Interface | Description | VRF |  MTU | Shutdown |
 | --------- | ----------- | --- | ---- | -------- |
-| Vlan1013 | SVC01_C1_VLAN_SITE01_PE04 - VRF ETHERNET_VPN | ETHERNET_VPN | - | False |
+| Vlan1013 | SVC01_C1_VLAN_SITE01_PE03 - VRF ETHERNET_VPN | ETHERNET_VPN | - | False |
 
 ##### IPv4
 
 | Interface | VRF | IP Address | IP Address Virtual | IP Router Virtual Address | ACL In | ACL Out |
 | --------- | --- | ---------- | ------------------ | ------------------------- | ------ | ------- |
-| Vlan1013 |  ETHERNET_VPN  |  10.1.4.13/24  |  -  |  -  |  -  |  -  |
+| Vlan1013 |  ETHERNET_VPN  |  10.1.3.12/24  |  -  |  -  |  -  |  -  |
 
 #### VLAN Interfaces Device Configuration
 
 ```eos
 !
 interface Vlan1013
-   description SVC01_C1_VLAN_SITE01_PE04 - VRF ETHERNET_VPN
+   description SVC01_C1_VLAN_SITE01_PE03 - VRF ETHERNET_VPN
    no shutdown
    vrf ETHERNET_VPN
-   ip address 10.1.4.13/24
+   ip address 10.1.3.12/24
 ```
 
 ## Routing
@@ -337,13 +339,13 @@ ip routing vrf MGMT
 | VRF | Destination Prefix | Next Hop IP | Exit interface | Administrative Distance | Tag | Route Name | Metric |
 | --- | ------------------ | ----------- | -------------- | ----------------------- | --- | ---------- | ------ |
 | MGMT | 0.0.0.0/0 | 192.168.2.1 | - | 1 | - | - | - |
-| ETHERNET_VPN | 0.0.0.0/0 | 10.1.4.1 | - | 1 | - | - | - |
+| ETHERNET_VPN | 0.0.0.0/0 | 10.1.3.1 | - | 1 | - | - | - |
 
 #### Static Routes Device Configuration
 
 ```eos
 !
-ip route vrf ETHERNET_VPN 0.0.0.0/0 10.1.4.1
+ip route vrf ETHERNET_VPN 0.0.0.0/0 10.1.3.1
 ip route vrf MGMT 0.0.0.0/0 192.168.2.1
 ```
 
